# bae

./: .continue-here.md  .gitignore  MILESTONE-AUDIT-bae-v2.0.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  dzarasplans.md  v3.0-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md
bae/: __init__.py  agent.py  cli.py  compiler.py  dspy_backend.py  exceptions.py  graph.py  lm.py  markers.py  node.py  optimized_lm.py  optimizer.py  resolver.py  result.py
bae/repl/: ai.py  (+18 more)
evals/: conftest.py  prompts.py  results_fence.txt  results_inverse.txt  results_json.txt  results_wrapper.txt  results_xml.txt  results_yaml.txt  test_convention.py
examples/: dep_recall_example.py  example_flow.py  ootd.py  run_ootd_traced.py  weather_outfit.py
experiment/: 01_sonnet_free.md  02_sonnet_cot.md  03_sonnet_schema.md  04_sonnet_schema_tools.md  05_haiku_free.md  06_haiku_cot.md  07_haiku_schema.md  08_haiku_schema_tools.md  09_haiku_schema_tools_novelty.md  10_sonnet_schema_tools_novelty.md  11_opus_schema_tools_novelty.md  12_opus_free_novelty.md  13_opus_cot_novelty.md  14_opus_schema_novelty.md  15_haiku_convfewshot_fields.md  16_sonnet_convfewshot_fields.md  17_opus_convfewshot_fields.md  18_panel_cognitive_science.md  19_panel_pl_theory.md  20_panel_clinical_protocol.md  21_panel_formal_pragmatics.md  22_panel_compiler_engineering.md  23_panel_ethnomethodology.md  24_chromatic_valence_test.md  25_panel_synthesis.md  26_exp1_mechanism_isolation.md  27_exp2_nonsense_fields.md  28_exp3_presuppositional.md  (+4 more)
(+518 files in other folders)
