[project]
name = "bae"
version = "0.1.0"
description = "Type-driven agent graphs"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "prompt-toolkit>=3.0.50",
    "pygments>=2.19",
    "rich>=14.3",
    "tomlkit>=0.14.0",
    "discord-py>=2.6.4",
]

[project.scripts]
bae = "bae.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
